fix overflow

--- a/website/src/app/components/cyllinder/cyllinder.module.scss
+++ b/website/src/app/components/cyllinder/cyllinder.module.scss
@@ -14,6 +14,7 @@
   }
 
   .cyllinder {
+    overflow: hidden;
     position: relative;
     width: 100%;
     height: 100%;
